# wasat

./: .gitignore  404.html  AGENTS.md  CNAME  ChangeLog.md  Contributing.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: style-lint-and-test.yaml
changelog/: index.html
docs/: getting_started.md  index.md
getting_started/: index.html
license/: index.html
search/: search_index.json
src/wasat/: __init__.py  __main__.py  certs.py  client.py  exceptions.py  response.py  status.py  trust.py  uri.py
tests/: test_certs.py  test_client.py  test_main.py  test_response.py  test_status.py  test_trust.py  test_uri.py
