[project]
name = "wasat"
version = "0.0.1"
description = "A async client library for the Gemini protocol"
readme = "README.md"
authors = [
    { name = "Dave Pearson", email = "davep@davep.org" }
]
requires-python = ">=3.12"
dependencies = []
license = "MIT"

[project.scripts]
wasat = "wasat.__main__:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.pyright]
venvPath="."
venv=".venv"
exclude=[".venv"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[dependency-groups]
dev = [
    "codespell>=2.4.2",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.17",
]
docs = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
]
test = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
]

[tool.coverage.run]
omit = [
     "tests/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

